# Proyecto_Despliegue

./: .gitignore  Modelo.IPYNB  Modelo.py  README.md  app.py  app_test.ipynb  entrega_1.html  entrega_1.ipynb  entrega_2.md  experimento_mlflow.py  experimento_mlflow_2.py  generar.py  get_best_runs.py  predic.csv  tablero_alfa.py  tox.ini
.ipynb_checkpoints/: entrega_1-checkpoint.ipynb
Paquete_app/: MANIFEST.in  config.py  pipeline.py  requirements.txt  setup.cfg  tox.ini
Paquete_app/api/: app.py
Paquete_app/bmw_model_project/: config.py  pipeline.py  predict.py  prediction_pipeline.py  train_pipeline.py
Paquete_app/bmw_model_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Paquete_app/bmw_model_project/bmw_model_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Paquete_app/bmw_model_project/trained/: best_model_enfocado_metadata.json  best_model_experimento_metadata.json  best_model_metadata.json  is_luxury_quantile.json  kmeans_model.joblib  scaler_cluster.joblib
Paquete_app/tests/: test_pipeline.py
bmw_app/: requirements.txt
bmw_app/app/: api.py
bmw_app/app/schemas/: predict.py
bmw_app/model-pkg/: bmw_model_project-0.1.0-py3-none-any.whl
data/: data.csv.dvc
