[metadata]
name = bmw-model-project
version = 0.1.0
description = Pipeline reproducible para modelado y despliegue de predicción de ventas BMW (2010–2024)
long_description = file: README.md
long_description_content_type = text/markdown
author = Jhon Rios
license = MIT
url = https://github.com/jhon1142/Proyecto_Despliegue
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas
    numpy
    scikit-learn
    xgboost
    mlflow
    joblib
    cloudpickle
    logging
    argparse

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    modelo-bmw = modelo_bmw:main